# hunsum-search

./: .env  Dockerfile  README.md  compose.yaml  kibana.yml  main.py  pyproject.toml  start.sh
.github/workflows/: python-app.yml
adapters/search_backend/: elastic_search_impl.py  elastic_search_interface.py  search_impl.py  search_interface.py
cli/: cli_impl.py  search_cli.py
data/elastic1/: nodes
data/elastic1/_state/: _4h.cfe  _4h.cfs  _4h.si  _4l.cfe  _4l.cfs  _4l.si  _7d.cfe  _7d.cfs  _7d.si  _7d_2.liv  _7e.cfe  _7e.cfs  _7e.si  _7f.cfe  _7f.cfs  _7f.si  _g.cfe  _g.cfs  _g.si  node-1.st  segments_4t  segments_bh  segments_k
data/elastic1/indices/ZXzjo79eR3WETpP4XkSSoA/0/_state/: retention-leases-15.st  state-16.st
data/elastic1/indices/ZXzjo79eR3WETpP4XkSSoA/0/index/: _0.cfe  _0.cfs  _0.si  _1.cfe  _1.si  segments_e
data/elastic1/indices/ZXzjo79eR3WETpP4XkSSoA/0/translog/: translog-19.tlog  translog.ckp
data/elastic1/indices/ZXzjo79eR3WETpP4XkSSoA/_state/: state-18.st
data/elastic1/indices/u0Yv2uYmQdOzDOrrXdu1bg/0/_state/: retention-leases-1.st  state-0.st
data/elastic1/indices/u0Yv2uYmQdOzDOrrXdu1bg/0/index/: _0.cfe  _0.cfs  _0.si  _1.cfe  _1.si  segments_2
data/elastic1/indices/u0Yv2uYmQdOzDOrrXdu1bg/0/translog/: translog.ckp
data/elastic1/indices/u0Yv2uYmQdOzDOrrXdu1bg/_state/: state-2.st
data/elastic1/snapshot_cache/: segments_1  segments_2  segments_p
routers/: router.py
schemas/: document_schema.py
